src/tests/ci/assignment_3_arrays_io_llvm/valid/04_array_assignment.c
int main() {
    int values[3] = {1, 2, 3};
    values[1] = 10;
    return values[1];
}
