src/tests/ci/assignment_3_arrays_io_llvm/invalid_semantic/02_array_index_float.c
int main() {
    int values[3] = {1, 2, 3};
    return values[1.5];
}
